--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,10 @@
+Click==7.0
 Flask==1.1.1
-Flask-Compress==1.4.0
 Flask-Cors==3.0.8
+itsdangerous==1.1.0
 Jinja2==2.10.3
+MarkupSafe==1.1.1
 mysql-connector-python==8.0.18
-pycosat==0.6.3
-pycparser==2.19
-Pygments==2.4.2
-pygpu==0.7.6
-pylint==2.4.3
-pymongo==3.9.0
-PyMySQL==0.9.3
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyparsing==2.4.2
-pyreadline==2.1
-pyrsistent==0.15.4
-PySocks==1.7.1
-python-dateutil==2.8.0
-pytz==2019.2
-pywin32==223
-pywinpty==0.5.5
-PyYAML==5.1.2
-pyzmq==18.0.2
-qtconsole==4.5.5
-requests==2.22.0
-urllib3==1.24.2
-webencodings==0.5.1
+protobuf==3.11.0
+six==1.13.0
 Werkzeug==0.16.0
-wget==3.2
-widgetsnbextension==3.5.1
-win-inet-pton==1.1.0
-wincertstore==0.2
-wrapt==1.11.2
-xlrd==1.2.0
-xlwt==1.3.0
